Added new views

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;0,600;0,700;1,500&family=Open+Sans:wght@400;600&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+  --primary-element-color: #eb5440;
+  --secondary-element-color: #4a4b4c;
+  --tertiary-element-color: #e8e8e8;
+  --tertiary-element-gray-color: #c3c3c3;
+  --background-1-color: #f6f6f6;
+  --background-2-color: #ffffff;
+  --primary-text-color: #000000;
+  --secondary-text-color: #4a4b4c;
+  --hyperlink-text-color: #067bc2;
+  --text-color-white: #ffffff;
+
+  --border-radius: 8px;
+  --font-Montserrat: 'Montserrat', sans-serif;
+  --font-OpenSans: 'Open Sans', sans-serif;
+  --transition: 0.5s ease all;
+
+  --max-width: 1370px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
