--- a/src/views/projectsPage/timer/timer-style.css
+++ b/src/views/projectsPage/timer/timer-style.css
@@ -145,7 +145,6 @@
   .control-panel {
     grid-template-columns: none;
     gap: 1rem;
-    text-align: center;
-    align-items: stretch;
+    justify-items: center;
   }
 }
