--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,12 +1,82 @@
 /*  Navbar */
 
 .navbar {
-  display: flex;
-  height: 45px;
-  background-color: var(--background-1-color);
   font-family: var(--main-font);
+  z-index: 100;
+  height: 110px;
+  position: sticky;
+  top: 0px;
+  padding-top: 23px;
+}
+.navbar::after {
+  content: '';
+  position: absolute;
+  top: 70px;
+  left: 0px;
+  width: 100%;
+  border-bottom: 1px solid transparent;
+  pointer-events: none;
+  transition: border 0.3s ease 0s;
+}
+.desktop-menu {
+  height: 100%;
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+.mobile-menu {
+  display: none;
+  height: 100%;
+  position: relative;
+}
+.drop-menu {
+  height: 100vh;
+  width: 100vw;
+  pointer-events: none;
+  background-color: rgb(17, 17, 17);
+  display: flex;
+  flex-direction: column;
+  padding: 130px 30px 41px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  transform: translateX(calc(100% + 100px));
+  transition: transform 0.5s ease 0s;
+}
+.hamburger-bn {
+  display: flex;
+  -webkit-box-align: center;
   align-items: center;
-  justify-content: flex-end;
+  -webkit-box-pack: center;
+  justify-content: center;
+  position: relative;
+}
+/* use in js */
+/* Opening menu */
+.menu-open {
+  transform: translateX(0px);
+  pointer-events: initial;
+  transition: transform 0.6s ease 0s;
+}
+.mob-animation {
+  font-family: var(--menu-font);
+  font-size: 40px;
+  min-height: 80px;
+  text-transform: uppercase;
+  position: relative;
+  mix-blend-mode: difference;
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  opacity: 0.1;
+  transform: translateX(-100px);
+  transition: opacity 0.9s ease 0.1s, transform 0.8s ease 0.1s;
+}
+.menu-open .mob-animation {
+  opacity: 1;
+  transform: translateX(0px);
 }
 .wrapper-links {
   width: 300px;
@@ -49,4 +119,20 @@
 ul li ul li {
   clear: both;
   width: 100%;
+}
+
+@media (max-width: 648px) {
+  .navbar {
+    padding-top: 0px;
+  }
+  .desktop-menu {
+    display: none;
+  }
+  .mobile-menu {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+  }
 }
